# opengl-demo

./: .gitignore  CMakeLists.txt  README.md
common/: wrapper_glfw.cpp  wrapper_glfw.h
graphics_examples/: graphics_examples.sln
graphics_examples/basic/: basic.cpp  basic.vcxproj  basic.vcxproj.filters
graphics_examples/basic_wrapper/: basic.cpp  basic.frag  basic.vert  basic_wrapper.vcxproj  basic_wrapper.vcxproj.filters
graphics_examples/vertex_attribs/: vert_attrib.vert  vertex_attribs.cpp  vertex_attribs.vcxproj  vertex_attribs.vcxproj.filters
